add: more contents to index

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Challanges</title>
+<title>YOIS  - Challenges / Exercises / Developments</title>
 </head>
 
 <body>
 <h2 data-sourcepos="1:1-1:10" dir="auto">About me / Acerce de mi </h2>
 <p data-sourcepos="1:1-1:10" dir="auto">&nbsp;</p>
-<h2 data-sourcepos="1:1-1:10" dir="auto">Challanges / Retos / Ejercicios</h2>
-<h2 data-sourcepos="1:1-1:10" dir="auto"><strong>1- Backbone Systems Challenge Senior Backend Developer</strong> ( <a href="#english">English</a> | <a href="#spanish">Español</a> )</h2>
+<h2 data-sourcepos="1:1-1:10" dir="auto">Challenges / Exercises / Developments</h2>
+<h2 data-sourcepos="1:1-1:10" dir="auto"><strong><a name="backbobonesystems"></a>1- Backbone Systems Challenge Senior Backend Developer</strong> ( <a href="#english">English</a> | <a href="#spanish">Español</a> )</h2>
 <h2 data-sourcepos="1:1-1:10" dir="auto">&nbsp;</h2>
 <h2 data-sourcepos="1:1-1:10" dir="auto"><a name="english"></a> English</h2>
 <p data-sourcepos="3:1-3:47" dir="auto"><strong>Backbone Systems Challenge Senior Backend Developer</strong></p>
