update index with my linkedin profile

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h2 data-sourcepos="1:1-1:10" dir="auto">About me / Acerce de mi </h2>
+<h2 data-sourcepos="1:1-1:10" dir="auto">About me / Acerce de mi: <a href="https://www.linkedin.com/in/yoisar/" title="LinkedIn">https://www.linkedin.com/in/yoisar/</a></h2>
 <p data-sourcepos="1:1-1:10" dir="auto">&nbsp;</p>
 <h2 data-sourcepos="1:1-1:10" dir="auto">Challenges / Exercises / Developments</h2>
 <h2 data-sourcepos="1:1-1:10" dir="auto"><strong><a name="backbobonesystems"></a>1- Backbone Systems Challenge Senior Backend Developer</strong> ( <a href="#english">English</a> | <a href="#spanish">Español</a> )</h2>
