--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <h2 data-sourcepos="1:1-1:10" dir="auto">About me / Acerce de mi: <a href="https://www.linkedin.com/in/yoisar/" title="LinkedIn">https://www.linkedin.com/in/yoisar/</a></h2>
 <p data-sourcepos="1:1-1:10" dir="auto">&nbsp;</p>
 <h2 data-sourcepos="1:1-1:10" dir="auto">Challenges / Exercises / Developments</h2>
-<h2 data-sourcepos="1:1-1:10" dir="auto"><strong><a name="backbobonesystems"></a>1- Backbone Systems Challenge Senior Backend Developer</strong> ( <a href="#english">English</a> | <a href="#spanish">Español</a> )</h2>
+<p data-sourcepos="1:1-1:10" dir="auto"><a href="#english">English</a> | <a href="#spanish">Español</a></p>
+<h2 data-sourcepos="1:1-1:10" dir="auto"><strong><a name="backbobonesystems"></a>1- Challenge : </strong>Replicate the API functionality <a href="https://jobs.backbonesystems.io/api/zip-codes/01210" rel="nofollow">https://jobs.backbonesystems.io/api/zip-codes/01210</a> </h2>
 <h2 data-sourcepos="1:1-1:10" dir="auto">&nbsp;</h2>
 <h2 data-sourcepos="1:1-1:10" dir="auto"><a name="english"></a> English</h2>
-<p data-sourcepos="3:1-3:47" dir="auto"><strong>Backbone Systems Challenge Senior Backend Developer</strong></p>
-<p data-sourcepos="5:1-5:173" dir="auto">To replicate the API functionality <a href="https://jobs.backbonesystems.io/api/zip-codes/01210" rel="nofollow">https://jobs.backbonesystems.io/api/zip-codes/01210</a> as requested in the challenge.</p>
+<p data-sourcepos="3:1-3:47" dir="auto">&nbsp;</p>
 <ol data-sourcepos="7:1-8:0" dir="auto">
   <li data-sourcepos="7:1-8:0"><strong>I developed a REST API in Laravel inside a Docker container with</strong>:</li>
 </ol>
@@ -52,10 +52,9 @@
 </ol>
 <ul data-sourcepos="31:2-33:0" dir="auto">
   <li data-sourcepos="31:2-31:64">API URL: <a href="http://challenges.lugaronline.com:8100/api/zip-codes" rel="nofollow">http://challenges.lugaronline.com:8100/api/zip-codes</a></li>
-  <li data-sourcepos="32:2-33:0">Challenge repository: <a href="https://github.com/yoisar/postal-service">https://github.com/yoisar/postal-service</a></li>
 </ul>
 <h2 data-sourcepos="34:1-34:11" dir="auto"><a name="spanish"></a>Español</h2>
-<p data-sourcepos="36:1-36:178" dir="auto">Para replicar el la funcionalidad la API <a href="https://jobs.backbonesystems.io/api/zip-codes/01210" rel="nofollow">https://jobs.backbonesystems.io/api/zip-codes/01210</a> como se solicita en el reto.</p>
+<p data-sourcepos="36:1-36:178" dir="auto">Para replicar el la funcionalidad la API <a href="https://jobs.backbonesystems.io/api/zip-codes/01210" rel="nofollow">https://jobs.backbonesystems.io/api/zip-codes/01210</a> </p>
 <ol data-sourcepos="38:1-38:78" dir="auto">
   <li data-sourcepos="38:1-38:78"><strong>Desarrollé una REST API en Laravel dentro un contenedor Docker con:</strong></li>
 </ol>
@@ -94,7 +93,6 @@
 </ol>
 <ul data-sourcepos="63:2-64:66" dir="auto">
   <li data-sourcepos="63:2-63:71">URL de la API: <a href="http://challenges.lugaronline.com:8100/api/zip-codes" rel="nofollow">http://challenges.lugaronline.com:8100/api/zip-codes</a></li>
-  <li data-sourcepos="64:2-64:66">Repositorio del reto: <a href="https://github.com/yoisar/postal-service">https://github.com/yoisar/postal-service</a></li>
 </ul>
 </body>
 </html>
