--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </li>
 </ol>
 <ul data-sourcepos="31:2-33:0" dir="auto">
-  <li data-sourcepos="31:2-31:64">API URL: <a href="http://challenges.lugaronline.com:8100/api/zip-codes" rel="nofollow">http://challenges.lugaronline.com:8100/api/zip-codes</a></li>
+  <li data-sourcepos="31:2-31:64">API URL: <a href="http://challenges.lugaronline.com:8100/api/zip-codes/01210" rel="nofollow">http://challenges.lugaronline.com:8100/api/zip-codes/01210</a></li>
 </ul>
 <h2 data-sourcepos="34:1-34:11" dir="auto"><a name="spanish"></a>Español</h2>
 <p data-sourcepos="36:1-36:178" dir="auto">Para replicar el la funcionalidad la API <a href="https://jobs.backbonesystems.io/api/zip-codes/01210" rel="nofollow">https://jobs.backbonesystems.io/api/zip-codes/01210</a> </p>
@@ -92,7 +92,7 @@
   <li data-sourcepos="62:1-62:15"><strong>Recursos</strong></li>
 </ol>
 <ul data-sourcepos="63:2-64:66" dir="auto">
-  <li data-sourcepos="63:2-63:71">URL de la API: <a href="http://challenges.lugaronline.com:8100/api/zip-codes" rel="nofollow">http://challenges.lugaronline.com:8100/api/zip-codes</a></li>
+  <li data-sourcepos="63:2-63:71">URL de la API: <a href="http://challenges.lugaronline.com:8100/api/zip-codes/01210" rel="nofollow">http://challenges.lugaronline.com:8100/api/zip-codes/01210</a></li>
 </ul>
 </body>
 </html>
